--- a/template.html
+++ b/template.html
@@ -354,7 +354,7 @@
                   >
                     <div
                       style="
-                        background-color: #f7f7f8;
+                        background-color: #e9effd;
                         height: 100%;
                         width: 100% !important;
                         border-radius: 0px;
